--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "tourism-website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/eslint-plugin-next": "^13.4.12",
     "@reduxjs/toolkit": "^1.9.5",
+    "antd": "^5.7.2",
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
@@ -21,5 +22,8 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.1.1",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "daisyui": "^3.3.1"
   }
 }
