--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "add": "^2.0.6",
     "antd": "^5.7.2",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -21,6 +22,7 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
     "react-slick": "^0.29.0",
