--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^8.1.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.7.20",
     "tailwindcss": "3.3.3",
     "yarn": "^1.22.19"
   },
