--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.8",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.7.20",
     "tailwindcss": "3.3.3",
