--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@next/eslint-plugin-next": "^13.4.12",
     "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/react-stripe-js": "^2.1.1",
+    "@stripe/stripe-js": "^1.54.1",
     "add": "^2.0.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
